--- a/test/fixtures/votes.yml
+++ b/test/fixtures/votes.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  poll: one
-  content: MyString
+  user: one
+  poll_choice: one
 
 two:
-  poll: two
-  content: MyString
+  user: two
+  poll_choice: two
